Fixing dark mode issues, again

--- a/next-portfolio/app/globals.css
+++ b/next-portfolio/app/globals.css
@@ -15,8 +15,17 @@ a {
   text-decoration: none;
 }
 
+p, span, h1, h2, h3, h4, h5, h6 {
+  color: black;
+}
+
+input, textarea, select, optgroup, option {
+  background-color: white;
+}
+
 * {
   box-sizing: border-box;
+  color: black;
 }
 
 @media (prefers-color-scheme: dark) {
